# pacmanCovid

./: CMakeLists.txt  main.cpp
lib/: libraries.cpp  libraries.h
